[tool.poetry]
name = "caechan"
version = "0.1.0"
description = ""
authors = ["TatsuyaKatayama <katayama1227ron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
soundcard = "^0.4.2"
soundfile = "^0.12.1"
speechrecognition = "^3.10.0"
fire = "^0.5.0"
openai = "^0.27.5"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"
langchain = "^0.0.154"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
